create sign in, sign up, forgot password pages and oath

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>MT Real EstateS</title>
+    <title>MT Real Estate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
